# froggy-rs

./: Cargo.toml  Makefile.toml  build.rs
src/: main.rs  paths.rs  speech_recogn.rs  utils.rs
src/lang_learning/: mod.rs
src/notify/: mod.rs
src/paths/: mod.rs
src/speech_recogn/: handlers.rs  mod.rs  speech_handler.rs
src/speech_recogn/handlers/: browser_search_handler.rs  listening_handler.rs  mod.rs  open_phrase_handler.rs  phrase_logger.rs  thanks_handler.rs
