[package]
name = "froggy-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.21.2"
cpal = "0.15.2"
dasp = "0.11.0"
dirs = "5.0.1"
opener = "0.6.1"
vosk = "0.2.0"
notify-rust = "4.8.0"
rand = "0.8.5"
tts_rust = "0.3.5"